--- a/first_ajax/templates/index.html
+++ b/first_ajax/templates/index.html
@@ -8,5 +8,9 @@
     <script type="text/javascript" src="{% static 'js/main.js' %}"> </script>
   </head>
   <body>
+    <button type="submit" class="get_ajax">Run Ajax</button>
+    <button type="submit" class="ping_button">Run Ajax Request to Ping/Pong</button>
+    <button type="submit" class="pong_button">Run Ajax Request to Ping/Pong</button>
+    <div id="ping"></div>
   </body>
 </html>
