got most working

--- a/first_ajax/templates/index.html
+++ b/first_ajax/templates/index.html
@@ -8,9 +8,11 @@
     <script type="text/javascript" src="{% static 'js/main.js' %}"> </script>
   </head>
   <body>
-    <button type="submit" class="get_ajax">Run Ajax</button>
-    <button type="submit" class="ping_button">Run Ajax Request to Ping/Pong</button>
-    <button type="submit" class="pong_button">Run Ajax Request to Ping/Pong</button>
-    <div id="ping"></div>
+    <p><button type="submit" class="get_ajax">Run Ajax Request to Root</button></p>
+    <p><button type="submit" class="ping_button">Run Ajax Request to Ping</button></p>
+    <p><button type="submit" class="pong_button">Run Ajax Request to Pong</button></p>
+    <section>
+
+    </section>
   </body>
 </html>
